<resources>
    <string name="app_name">Perfume Store</string>
    <string name="title1">Seleccione un tamaño</string>
    <string name="sizes1">50 ml</string>
    <string name="sizes2">75 ml</string>
    <string name="title2">Seleccione los aromas</string>
    <string name="aromas1">Canela</string>
    <string name="aromas2">Lavanda</string>
    <string name="aromas3">Naranja</string>
    <string name="aromas4">Mirra</string>
    <string name="aromas5">Salvia</string>
    <string name="aromas6">Sándalo</string>
    <string name="endButton">Añadir a la cesta</string>
    <string name="title_activity_actualizar_datos">ActualizarDatos</string>
    <string name="juan">Juan</string>
    <string name="nombre">Nombre</string>
    <string name="juanente">Juan</string>
    <string name="apellidos">Apellidos</string>
    <string name="ejemplo_apellidos">de la Peña Garcia</string>
    <string name="domicilio">Domicilio</string>
    <string name="dni">DNI</string>
    <string name="email">Email</string>
    <string name="jpeg_unican_es">jpeg@unican.es</string>
    <string name="password">Password</string>
    <string name="ejemplo_password">********</string>
    <string name="iban">IBAN</string>
    <string name="modificar">Modificar</string>
    <string name="datos_modificados">Datos modificados</string>
    <string name="continuar">Continuar</string>
    <string name="ejemplo_iban">ES6000491500051234567892</string>
    <string name="ejemplo_dni">05158902S</string>
    <string name="ejemplo_domicilio">Calle Peña Hermosa 2, 39012, Santander</string>
    <string name="actualizar_datos">Actualizar datos</string>
    <string name="datos">Actualizar datos</string>
    <string name="seleccionar">Seleccione una opción</string>
    <string name="comprar_perfume">Comprar perfume</string>
    <string name="crear_perfume">Crear perfume</string>
    <string name="cambiar_mis_datos">Cambiar mis datos</string>
    <string name="ver_pedidos">Ver el estado de mis pedidos</string>
    <string name="cerrar_sesion">Cerrar la sesión</string>
    <string name="title_activity_crear_perfume">CrearPerfume</string>
    <string name="titulo">Registrarse</string>
    <string name="alta">Dar de alta</string>
</resources>