<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="#EFEFEFEF"
    tools:context=".ActualizarDatos">

    <TextView
        android:id="@+id/texto_actualizar_datos"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="#E8BFD4"
        tools:fontFamily="sans-serif-black"
        tools:text="@string/actualizar_datos"
        tools:textSize="22sp" />

    <TextView
        android:id="@+id/texto_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:text="@string/nombre"
        android:textColor="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        style='@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox'
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nombre"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/juanente"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColorHint="#757575"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
            tools:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/texto_apellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="148dp"
        android:text="@string/apellidos"
        android:textColor="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        style='@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox'
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/apellidos"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ejemplo_apellidos"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColorHint="#757575"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
            tools:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/texto_domicilio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="236dp"
        android:text="@string/domicilio"
        android:textColor="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        style='@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox'
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/domicilio"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ejemplo_domicilio"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColorHint="#757575"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
            tools:inputType="text"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="261dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/texto_dni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="324dp"
        android:text="@string/dni"
        android:textColor="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style='@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox'
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="344dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dni"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColorHint="#757575"
            tools:hint="@string/ejemplo_dni"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
            tools:inputType="text"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="261dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/texto_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="412dp"
        android:text="@string/email"
        android:textColor="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        style='@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox'
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="432dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/jpeg_unican_es"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColorHint="#757575"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
            tools:inputType="text"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="261dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/texto_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="500dp"
        android:text="@string/password"
        android:textColor="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        style='@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox'
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="520dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ejemplo_password"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColorHint="#757575"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
            tools:inputType="text"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="261dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/texto_iban"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="592dp"
        android:text="@string/iban"
        android:textColor="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        style='@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox'
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="612dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/iban"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ejemplo_iban"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColorHint="#757575"
            tools:hint="ES6000491500051234567892"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
            tools:inputType="text"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="613dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/Modificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#03A9F4"
        android:onClick="modificarDatos"
        android:text="@string/modificar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>